2014-03-29  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* benchtests/Makefile (DETAILED_OPT): New make option.
	(bench-func): Run benchmark program with -d if DETAILED_OPT is
	set.
	* benchtests/bench-skeleton.c: Include stdbool.h.
	(main): Store and print timings per input.
	* benchtests/scripts/bench.py (STRUCT_TEMPLATE): Add timing
	member to each argument value.
	(EPILOGUE): Define new macros RESULT and RESULT_ACCUM.
	(_print_arg_data): Initialize per-input timing to 0.

	* benchtests/Makefile (timing-type): New binary.
	(bench-clean): Also remove bench-timing-type.
	(bench): New target for timing-type.
	(bench-func): Print output in JSON format.
	* benchtests/bench-skeleton.c (main): Print output in JSON
	format.
	* benchtests/bench-timing-type.c: New file.
	* benchtests/bench-timing.h (TIMING_TYPE): New macro.
	(TIMING_PRINT_STATS): Remove.
	* benchtests/scripts/bench.py (_print_arg_data): Store variant
	name separately.

	* benchtests/bench-modf.c: Remove.
	* benchtests/modf-inputs: New inputs file.

2014-03-28  Joseph Myers  <joseph@codesourcery.com>

	[BZ #16362]
	* math/s_clog10.c (M_PI_LOG10E): New macro.
	(__clog10): Use M_PI_LOG10E instead of M_PI when real and
	imaginary parts are 0.
	* math/s_clog10f.c (M_PI_LOG10Ef): New macro.
	(__clog10f): Use M_PI_LOG10Ef instead of M_PI when real and
	imaginary parts are 0.
	* math/s_clog10l.c (M_PI_LOG10El): New macro.
	(__clog10l): Use M_PI_LOG10El instead of M_PIl when real and
	imaginary parts are 0.
	* math/libm-test.inc (clog10_test_data): Update expected results
	for when real and imaginary parts are 0.

2014-03-27  Paul Pluzhnikov  <ppluzhnikov@google.com>

	* elf/dl-load.c: Finish conversion of __builtin_expect into
	__glibc_{un}likely.

2014-03-27  Joseph Myers  <joseph@codesourcery.com>

	[BZ #16348]
	* sysdeps/i386/fpu/e_expl.S (IEEE754_EXPL) [!USE_AS_EXPM1L]: Use
	1+x for argument with exponent below -67.
	* sysdeps/x86_64/fpu/e_expl.S (IEEE754_EXPL) [!USE_AS_EXPM1L]:
	Likewise.