@@ -13,7 +13,7 @@ Version 2.20
   16532, 16545, 16574, 16599, 16600, 16609, 16610, 16611, 16613, 16623,
   16632, 16634, 16639, 16642, 16649, 16670, 16674, 16677, 16680, 16683,
   16689, 16695, 16701, 16706, 16707, 16712, 16713, 16714, 16731, 16743,
-  16758, 16759, 16760.
+  16758, 16759, 16760, 16770.
 
 * Running the testsuite no longer terminates as soon as a test fails.
   Instead, a file tests.sum (xtests.sum from "make xcheck") is generated,
